# cosmic-detector-simulation

./: CMakeLists.txt  README.md  algebra_types.h  algebra_utils.cpp  algebra_utils.h  detector_setup.cpp  detector_setup.h  geometry_types.cpp  geometry_types.h  histogram.cpp  histogram.h  main.cpp  matrix.h  plot_histo.sh  sampled_distribution.h  simulation_algorithms.cpp  simulation_algorithms.h  utilities.cpp  utilities.h
tools/: plot_histos.gpl
